--- a/class-component/package.json
+++ b/class-component/package.json
@@ -6,8 +6,20 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write ./src",
+    "ci:format": "prettier --check ./src",
+    "lint": "eslint --fix ./src",
+    "ci:lint": "eslint ./src",
+    "husky:pre-commit": "git hook run pre-commit",
+    "husky:pre-push": "git hook run pre-push",
+    "prepare": "cd .. && husky class-component/.husky"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": ".husky/pre-commit",
+      "pre-push": ".husky/pre-push"
+    }
   },
   "dependencies": {
     "prettier": "^3.3.2",
