feat: add prettier and eslint settings

--- a/class-component/.eslintrc
+++ b/class-component/.eslintrc
@@ -28,6 +28,8 @@
       "warn",
       { "allowConstantExport": true }
     ],
+    "no-shadow": "off",
+    "@typescript-eslint/no-shadow": "warn",
     "max-lines-per-function": [
       "error",
       {
