--- a/class-component/package.json
+++ b/class-component/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "preview": "vite preview",
-    "format": "prettier --write ./src",
+    "format:fix": "prettier --write ./src",
     "ci:format": "prettier --check ./src",
     "lint": "eslint --fix ./src",
     "ci:lint": "eslint ./src",
