--- a/class-component/.eslintrc
+++ b/class-component/.eslintrc
@@ -9,11 +9,9 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:react-hooks/recommended",
-    "airbnb-base",
-    "airbnb-typescript/base",
     "prettier"
   ],
-  "ignorePatterns": ["dist", ".eslintrc.cjs"],
+  "ignorePatterns": ["dist"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": "./tsconfig.eslint.json"
@@ -21,6 +19,7 @@
   "noInlineConfig": true,
   "plugins": ["react-refresh", "@typescript-eslint", "prettier"],
   "rules": {
+    "@typescript-eslint/no-explicit-any": "error",
     "no-console": "warn",
     "no-debugger": "warn",
     "no-var": "error",
