--- a/class-component/package.json
+++ b/class-component/package.json
@@ -13,7 +13,8 @@
     "ci:lint": "eslint ./src",
     "husky:pre-commit": "git hook run pre-commit",
     "husky:pre-push": "git hook run pre-push",
-    "prepare": "cd .. && husky class-component/.husky"
+    "prepare": "cd .. && husky class-component/.husky",
+    "test": ""
   },
   "husky": {
     "hooks": {
@@ -23,7 +24,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
