--- a/class-component/package.json
+++ b/class-component/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
@@ -45,6 +46,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "jsdom": "^24.1.1",
     "prettier": "^3.3.2",
+    "react-redux": "^9.1.2",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
     "vitest": "^2.0.4"
