--- a/class-component/package.json
+++ b/class-component/package.json
@@ -23,6 +23,8 @@
     }
   },
   "dependencies": {
+    "file-saver": "^2.0.5",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1"
@@ -32,7 +34,9 @@
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20.14.12",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
