--- a/class-component/tsconfig.app.json
+++ b/class-component/tsconfig.app.json
@@ -25,5 +25,10 @@
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src"]
+  "include": [
+    "src",
+    "node_modules/vitest/globals.d.ts",
+    "node_modules/vitest/globals.d.ts",
+    "node_modules/vitest/globals.d.ts"
+  ]
 }
