--- a/nextjs-ssr-pages-api/package.json
+++ b/nextjs-ssr-pages-api/package.json
@@ -17,11 +17,16 @@
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "file-saver": "^2.0.5",
+    "papaparse": "^5.4.1",
+    "prettier": "^3.3.2",
     "react-redux": "^9.1.2",
     "typescript": "^5"
   }
