--- a/nextjs-ssr-pages-api/package.json
+++ b/nextjs-ssr-pages-api/package.json
@@ -25,6 +25,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "file-saver": "^2.0.5",
+    "next-redux-wrapper": "^8.1.0",
     "papaparse": "^5.4.1",
     "prettier": "^3.3.2",
     "react-redux": "^9.1.2",
