--- a/forms/package.json
+++ b/forms/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
     "preview": "vite preview",
+    "format:fix": "prettier --write ./src",
+    "ci:format": "prettier --check ./src",
+    "lint": "eslint --fix ./src",
+    "ci:lint": "eslint ./src",
     "husky:pre-commit": "git hook run pre-commit",
     "husky:pre-push": "git hook run pre-push",
-    "prepare": "husky install"
+    "prepare": "cd .. && husky forms/.husky"
   },
   "husky": {
     "hooks": {
@@ -19,6 +22,7 @@
     }
   },
   "dependencies": {
+    "chalk": "^5.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -34,7 +38,6 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
     "husky": "^9.1.4",
     "lint-staged": "^15.2.9",
     "prettier": "^3.3.3",
