--- a/forms/package.json
+++ b/forms/package.json
@@ -22,6 +22,7 @@
     }
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@reduxjs/toolkit": "^2.2.7",
     "chalk": "^5.3.0",
     "react": "^18.3.1",
